[package]
name = "see"
version = "0.0.4"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "A simple and fast web server"
homepage = "https://github.com/wyhaya/see"
repository = "https://github.com/wyhaya/see.git"
license = "MIT"
readme = "README.md"

keywords = [
    "http",
    "web",
    "server",
    "static"
]

[profile.release]
lto = true
codegen-units = 1
# strip = "symbols"

[dependencies]
ace = "0.2.0"
async-compression = { version = "0.3.5", features = ["stream", "gzip", "deflate", "brotli"] }
base64 = "0.12.3"
dirs = "3.0.1"
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }
globset = "0.4.5"
hyper = "0.13.8"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
num_cpus = "1.13.0"
percent-encoding = "2.1.0"
regex = "1.3.9"
time = "0.1.43"
tokio = { version = "0.2.22", features = ["fs", "rt-threaded", "macros", "io-std"] }
tokio-rustls = "0.14.1"
tokio-util = { version = "0.3.1", features = ["codec"] }
webpki-roots = "0.20.0"
