[package]
name = "see"
version = "0.0.7"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
description = "Simple and fast web server."
homepage = "https://github.com/wyhaya/see"
repository = "https://github.com/wyhaya/see.git"
readme = "README.md"
keywords = ["http", "web", "server", "static"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
# strip = "symbols"

[dependencies]
async-compression = { version = "0.3.7", features = ["tokio", "gzip", "deflate", "brotli"] }
base64 = "0.13.0"
clap = { version = "2.33.3", default-features = false }
dirs = "3.0.1"
futures-util = { version = "0.3.12", default-features = false, features = ["std"] }
globset = "0.4.6"
hyper = { version = "0.14.2", features = ["full"] }
hyper-rustls = "0.22.1"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
num_cpus = "1.13.0"
percent-encoding = "2.1.0"
regex = "1.4.3"
time = "0.1.44"
tokio = { version = "1.1.0", features = ["fs", "rt-multi-thread", "macros", "io-std"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.6.2", default-features = false, features = ["codec"] }
