[package]
name = "see"
version = "0.0.8"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
description = "Simple and fast web server"
homepage = "https://github.com/wyhaya/see"
repository = "https://github.com/wyhaya/see.git"
readme = "README.md"
keywords = ["http", "web", "server", "static"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
async-compression = { version = "0.3.14", features = ["tokio", "gzip", "deflate", "brotli"] }
base64 = "0.13.0"
clap = { version = "2.33.3", default-features = false }
dirs = "4.0.0"
futures-util = { version = "0.3.12", default-features = false, features = ["std"] }
globset = "0.4.8"
hyper = { version = "0.14.18", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http1", "http2", "native-tokio", "tls12"] }
lazy_static = "1.4.0"
mime_guess = "2.0.4"
percent-encoding = "2.1.0"
regex = "1.5.5"
time = "=0.2.22" # TODO
tokio = { version = "1.18.4", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.7.2", default-features = false, features = ["codec"] }

[package.metadata.deb]
extended-description = """\
Simple and fast web server as a single executable with no extra dependencies required."""
maintainer-scripts = "systemd/"
systemd-units = { enable = false }
depends = "$auto"
section = "utility"
priority = "optional"
conf-files = ["/etc/see/server.conf"]
assets = [
    ["target/release/see", "usr/bin/see-server", "755"],
    ["see-default.conf", "/etc/see/server.conf", "644"],
]
